--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Bin.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Bin.data.gz",
-        frameworkUrl: buildUrl + "/Bin.framework.js.gz",
-        codeUrl: buildUrl + "/Bin.wasm.gz",
+        dataUrl: buildUrl + "/Bin.data.br",
+        frameworkUrl: buildUrl + "/Bin.framework.js.br",
+        codeUrl: buildUrl + "/Bin.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "u1w2303",
