--- a/Bin/index.html
+++ b/Bin/index.html
@@ -31,9 +31,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Bin.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Bin.data.gz",
-        frameworkUrl: buildUrl + "/Bin.framework.js.gz",
-        codeUrl: buildUrl + "/Bin.wasm.gz",
+        dataUrl: buildUrl + "/Bin.data",
+        frameworkUrl: buildUrl + "/Bin.framework.js",
+        codeUrl: buildUrl + "/Bin.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "u1w2303",
