--- a/Bin/index.html
+++ b/Bin/index.html
@@ -29,11 +29,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BinDesert.loader.js";
+      var loaderUrl = buildUrl + "/Bin.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BinDesert.data",
-        frameworkUrl: buildUrl + "/BinDesert.framework.js",
-        codeUrl: buildUrl + "/BinDesert.wasm",
+        dataUrl: buildUrl + "/Bin.data",
+        frameworkUrl: buildUrl + "/Bin.framework.js",
+        codeUrl: buildUrl + "/Bin.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "u1w2303",
